--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Hello</h1>
+<app-header> </app-header>
+<main>
+  <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
+</main>
