--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -1,1 +1,12 @@
-<p>cart-item works!</p>
+<div>
+  <img src="https://m.media-amazon.com/images/I/7120GgUKj3L._AC_UL320_.jpg">
+  <p>Apple AirPods (2nd Generation)</p>
+  <div>⭐⭐⭐⭐⭐</div>
+  <div>$99</div>
+  <div class="input-group mb-3">
+    <button class="btn btn-outline-secondary" type="button" >-</button>
+    <input type="text" class="form-control">
+    <button class="btn btn-outline-secondary" type="button" >+</button>
+  </div>
+
+</div>
