--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -1,11 +1,11 @@
 <div>
-  <img src="https://m.media-amazon.com/images/I/7120GgUKj3L._AC_UL320_.jpg">
-  <p>Apple AirPods (2nd Generation)</p>
+  <img src="{{item.image}}">
+  <p>{{item.description}}</p>
   <div>⭐⭐⭐⭐⭐</div>
-  <div>$99</div>
+  <div>{{item.price}}</div>
   <div class="input-group mb-3">
     <button class="btn btn-outline-secondary" type="button" >-</button>
-    <input type="text" class="form-control">
+    <input type="text" class="form-control" value="{{item.qty}}">
     <button class="btn btn-outline-secondary" type="button" >+</button>
   </div>
 
