finalize the styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,10 @@
   <app-cart-item></app-cart-item>
   <app-cart-item></app-cart-item>
   <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
+
 
 </main>
