--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -14,9 +14,9 @@
   <div class="item-stock" > In Stock :{{item.qty}}</div>
   <p>add to Cart</p>
   <div class="input-group mb-3 add-to-cart-ctrl">
-    <button class="btn btn-outline-secondary" type="button" >-</button>
-    <input type="text" class="form-control" value="0">
-    <button class="btn btn-outline-secondary" type="button" >+</button>
+    <button [disabled]="inCart === 0"  class="btn btn-outline-secondary" type="button" (click)="updateCart(false)">-</button>
+    <input type="text" class="form-control" [(ngModel)]="inCart">
+    <button [disabled]="inCart === item.qty" class="btn btn-outline-secondary" type="button"  (click)="updateCart(true)">+</button>
   </div>
 
 </div>
