add out of stock tag

--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -11,7 +11,8 @@
   </ng-container>
 
   <div class="item-price" >{{item.price | currency : 'USD'}}</div>
-  <div class="item-stock" > In Stock :{{item.qty}}</div>
+  <div *ngIf="inCart !== item.qty" class="item-stock" > In Stock :{{item.qty}}</div>
+  <div *ngIf="inCart === item.qty" class="out-of-stock">Out of Stock</div>
   <p>add to Cart</p>
   <div class="input-group mb-3 add-to-cart-ctrl">
     <button [disabled]="inCart === 0"  class="btn btn-outline-secondary" type="button" (click)="updateCart(false)">-</button>
