--- a/src/app/cart-item/cart-item.component.scss
+++ b/src/app/cart-item/cart-item.component.scss
@@ -38,4 +38,11 @@
   &:hover{
     border: 1px solid lightgray;
   }
-}
+  .out-of-stock
+  {
+    background-color: red;
+    color: white;
+    padding: 2px 5px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+  }}
