--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
 <app-header> </app-header>
 <main>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
+  <app-cart-item *ngFor="let it of items" [item]="it">
+
+  </app-cart-item>
+
 
 
 </main>
