--- a/src/app/cart-item/cart-item.component.scss
+++ b/src/app/cart-item/cart-item.component.scss
@@ -11,10 +11,14 @@
 
     .item-image{
       height: 320px;
+      width: 250px;
+      object-fit: contain;
+
     }
 
     .item-description{
       margin-top:10px;
+      text-align: center;
 
     }
 
