--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <header>
-  <img src="https://www.amazon.com/ref=nav_logo">
+  <img src="https://www.pngkey.com/png/full/697-6975794_pet-logo-png.png">
 </header>
