--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,14 @@
 header{
-  height: 50px;
+  height: 60px;
   background-color: #232f3e;
+  display: flex;
+
+  img{
+    //width: 50px;
+    height: 50px;
+    align-items: center;
+    margin-left: 20px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+  }
 }
