add cart button

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,11 @@
 <header>
   <img src="https://www.pngkey.com/png/full/697-6975794_pet-logo-png.png">
+
+
+  <div class="cart-container">
+    <span>10</span>
+    <div class="cart-icon"></div>
+    <small>Cart</small>
+
+  </div>
 </header>
