add cart item count

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
 
 
   <div class="cart-container">
-    <span>10</span>
+    <span>{{totalItemInCart}}</span>
     <div class="cart-icon"></div>
     <small>Cart</small>
 
